# frontdesk

./: .gitignore  .samignore  CURRENT_STATUS.md  HospitableAgentMCP.md  HospitableAgentProgress.md  PHASE2_PLAN.md  README.md  deploy.sh  pyproject.toml  requirements.txt  template.yaml
.github/workflows/: security.yml
checks/: __init__.py  _utils.py  actionable_review.py  finding.py  knowledge_hub_hygiene.py  missing_turnover_task.py  runner.py  smartlock_battery.py  turnover_gap.py  unanswered_inquiry.py
hospitable/: __main__.py  client.py  data.py  formatters.py  lambda_handler.py  telegram.py
prototypes/: inquiry_sender_probe.py  smartlock_battery_probe.py
tests/: test_checks.py  test_formatters.py  test_lambda_handler.py
