[project]
name = "hospitable-concierge"
version = "0.1.0"
description = "Read-only nightly auditor for a short-term rental portfolio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
